@@ -11,9 +11,11 @@ module Druid
     # 'goto' method to take you to the page.
     #
     # @param [String] the url for the page.
+    # @param [Symbol] a method name to call to get the url
     #
     def page_url(url)
       define_method("goto") do
+        url = url.kind_of?(Symbol) ? self.send(url) : url
         driver.goto url
       end
     end
